# ljmediaplayer

./: CMakeLists.txt  utils.h
enum_op_test/: enum_op_test.cpp  enum_op_test.vcxproj  enum_op_test.vcxproj.filters
ljplayer/: ViewController.h  ViewController.m  main.m
ljplayer.xcodeproj/: project.pbxproj
ljplayer.xcodeproj/xcuserdata/tal.xcuserdatad/xcschemes/: xcschememanagement.plist
ljplayer/Base.lproj/: Main.storyboard
ljplayerTests/: ljplayerTests.m
ljplayerUITests/: ljplayerUITests.m  ljplayerUITestsLaunchTests.m
macos/: AppDelegate.h  AppDelegate.m  CMakeLists.txt
media/: CMakeLists.txt
media/ljmedia/: CMakeLists.txt  config.h  error_code.h  lj_media.h
media/src/: CMakeLists.txt  codec.cpp  codec.h  codec_factory.h  codec_manager.h  data_buffer.cpp  data_buffer.h  lj_defined.h  log.cpp  log.h  media.cpp  media.h  media_channel.cpp  media_channel.h  media_channel_factory.cpp  media_channel_factory.h  media_codec.cpp  media_codec.h  media_codec_channel.cpp  media_codec_channel.h  media_codec_factory.h  media_codec_manager.h  media_context.cpp  media_context.h  media_context_manager.cpp  media_context_manager.h  media_flv.h  media_source.cpp  media_source.h  media_source_channel.cpp  media_source_channel.h  media_source_channel_data_recive.h  media_source_factory.h  media_source_manager.h  network_manager.h  object.cpp  object.h  object_sptr.cpp  object_sptr.h  spin_lock.cpp  (+9 more)
media/src/codec/: CMakeLists.txt  codec_utils.cpp  codec_utils.h  media_codec_ffmpeg_decode.cpp  media_codec_ffmpeg_decode.h  media_codec_manager.cpp  media_codec_manager.h  media_codec_x264.cpp  media_codec_x264.h
media/src/core/: CMakeLists.txt  data_buffer.cpp  data_buffer.h  enum_operator.h  log.cpp  log.h  object.cpp  object.h  object_sptr.cpp  object_sptr.h  spin_lock.cpp  spin_lock.h  task_object.cpp  task_object.h  task_queue.cpp  task_queue.h  thread_pools.h  url.cpp  url.h
media/src/input/: CMakeLists.txt  file_input.cpp  file_input.h  input_media_source_manager.cpp  input_media_source_manager.h  rtmp_media_source.cpp  rtmp_media_source.h  rtsp_media_source.cpp  rtsp_media_source.h
media/src/input/rtmp/: CMakeLists.txt  rtmp.c  rtmp.h  rtmp_context.cpp  rtmp_context.h  rtmp_define.cpp  rtmp_define.h  rtmp_link.cpp  rtmp_link.h  rtmp_net.cpp  rtmp_net.h  rtmp_packet.cpp  rtmp_packet.h  rtmp_read_writer_callback.cpp  rtmp_read_writer_callback.h  rtmp_status.cpp  rtmp_status.h  rtmp_sys.h  rtmp_utils.cpp  rtmp_utils.h  utils.cpp
media/src/kernel/: CMakeLists.txt  channel.h  channel_factory.cpp  channel_factory.h  channel_std.cpp  channel_std.h  io_event.h  io_event_factory.cpp  io_event_factory.h  io_event_std.cpp  io_event_std.h  io_select_event.cpp  io_select_event.h  network_manager.h  read_writer.h  read_writer_callback.h  read_writer_callback_std.cpp  read_writer_callback_std.h
media/src/ljmedia/: CMakeLists.txt  lj_media.cpp
media/src/network/: CMakeLists.txt  channel.cpp  channel.h  lj_network_define.h  network_manager.cpp  network_manager_std.cpp  network_manager_std.h  network_utils.cpp  network_utils.h  socket.cpp  socket.h  socket_factory.cpp  socket_factory.h  tcp_socket.cpp  tcp_socket.h  url.cpp  url.h
media/src/network/win/: CMakeLists.txt  network_manager_win.cpp  network_manager_win.h
test/: CMakeLists.txt
test/rtmp_open_test/: CMakeLists.txt  main.cpp
test/rtsp_open_test/: CMakeLists.txt  main.cpp
